fix training library spacing (closes S#4353)

--- a/app/assets/stylesheets/training_modules/_training.styl
+++ b/app/assets/stylesheets/training_modules/_training.styl
@@ -107,6 +107,7 @@
   text-align left
 
 .training-libraries
+  margin-top 29px
   col(12/12)
 .training-libraries__individual-library
   col(6/12)
